--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -28,6 +28,41 @@
   color: #61dafb;
 }
 
+.main_container {
+  margin-top: 50px;
+  margin-left: 33%;
+}
+
+.title {
+  margin-left: 2%;
+}
+
+.sub_container {
+  border: 1px solid black;
+  height: 550px;
+  width: 500px;
+  margin-top: 30px;
+  text-align: center
+
+}
+
+.image_container {
+  height: 300px;
+  width: 500px;
+  margin-top: 30px;
+}
+
+.prediction_container {
+  border: 2px solid red;
+  height: 50px;
+  width: 100px;
+  margin-top: 10%;
+  margin-left: 40%;
+  text-align: center;
+  justify-content: center;
+  }
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
